--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>transitfeeds-client-library</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>Transitfeeds.com Client Library</name>
+    <name>TransitFeeds.com Client Library</name>
     <description>A Java client library for the Pelias geocoder</description>
     <url>https://github.com/CUTR-at-USF/pelias-client-library</url>
 
